# PPP2_FLTK

./: CMakeLists.txt  Graph.cpp  Graph.h  Gui.h  Point.h  README.md  Simple_window.h  Window.cpp  fltk.h
src/: GUI.cpp  Graph.cpp  Graph.h  Gui.h  Point.h  Simple_window.h  Window.cpp  Window.h  main.cpp
